--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <main>
         <div class="button-container">
-            <a href="https://www.instagram.com/insert-link-to-instagram-here" target="_blank" class="instagram-button">Go to Instagram</a>
+            <a href="https://www.instagram.com/dean_inferrnuss" target="_blank" class="instagram-button">Go to Instagram</a>
             <a href="https://www.olx.ua" target="_blank" class="olx-button">Go to OLX.ua</a>
             <a href="javascript:void(0);" class="whatsapp-button">Contact via WhatsApp</a>
         </div>
