--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>Import PC UK</h1>
     </header>
     <main>
         <div class="button-container">
-            <a href="https://www.instagram.com/dean_inferrnuss" target="_blank" class="instagram-button">Go to Instagram</a>
-            <a href="https://www.olx.ua" target="_blank" class="olx-button">Go to OLX.ua</a>
+            <a href="https://www.instagram.com/dean_inferrnuss" target="_blank" class="instagram-button">Instagram</a>
+            <a href="https://www.olx.ua" target="_blank" class="olx-button">OLX.ua</a>
             <a href="javascript:void(0);" class="whatsapp-button">Contact via WhatsApp</a>
         </div>
     </main>
     <footer>
-        <p>&copy; 2023 My Simple Website</p>
+        <p>&copy; 2023 Import PC UK</p>
     </footer>
     <script src="script.js"></script>
 </body>
